--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,26 +1,21 @@
-upstream homeInventory {
-	server django_homeInventory:8000;
+upstream django {
+  server webhi:8000;
 }
 
 server {
-	listen 80;
-    listen [::]:80;
-		client_max_body_size 20M;
+  listen 80;
 
-    location / {
-        proxy_pass http://homeInventory;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-    location /static/ {
-    	alias /home/app/web/staticfiles/;
-			client_max_body_size 20M;
-    }
-		location /media/ {
-    	alias /home/app/web/mediafiles/;
-			client_max_body_size 20M;
-    }
+  location / {
+    proxy_pass http://django;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host:8000;
+    proxy_redirect off;
+  }
 
-
+  location /static/ {
+    alias /home/app/web/staticfiles/;
+  }
+  location /media/ {
+    alias /home/app/web/mediafiles/;
+  }
 }
