added network info

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,7 @@ volumes:
   postgres-data:
   staticfiles:
   mediafiles:
+networks:
+  default:
+    external:
+      name: nginxproxymanager_default
