--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,8 @@ services:
     container_name: nginx_homeInventory
     build: ./nginx
     restart: always
-    ports:
-      - 8000:80
+    expose:
+      - 80
 
     volumes:
       - ./nginx:/etc/nginx/conf.d
