--- a/homeInventoryManager/Dockerfile
+++ b/homeInventoryManager/Dockerfile
@@ -26,6 +26,7 @@ COPY . $APP_HOME
 RUN chown -R app:app $APP_HOME
 
 USER app:app
+RUN pip freeze > $APP_HOME/staticfiles/d_requirements.txt
 RUN python manage.py collectstatic --noinput
-
-CMD gunicorn home.wsgi:application --bind 0.0.0.0:8000
+CMD py.test
+#CMD gunicorn home.wsgi:application --bind 0.0.0.0:8000
